# ProceduralCPPLandscapes

./: CMakeLists.txt
.cache/clangd/index/: Color.cpp.65CA4384E484821A.idx  Color.h.538DF20722BB2DC7.idx  IRenderer.h.DAB7EFD188981B32.idx  Layer.h.53FF0405AA0E8D9D.idx  Mountain.cpp.98F0EF109C54CD36.idx  Mountain.h.D933F8AED32E4BDA.idx  MountainLayer.cpp.77E972719B301B81.idx  MountainLayer.h.735990FA476E37B8.idx  MountainParams.h.C0CFC1D7E7A45B1A.idx  RenderUtils.h.B8BA004DCFE6D5D8.idx  SDLRenderer.cpp.78C0EEB9CD24CC6D.idx  SDLRenderer.h.7079BA0798FC0D77.idx  Scene.cpp.9775DCA0758E5F0F.idx  Scene.h.56CFFD466976FDE3.idx  main.cpp.84F09C69287324F6.idx  mountain.cpp.794CDCD4FC699953.idx
include/: Color.h  ColorScheme.h  IRenderer.h  Layer.h  Mountain.h  MountainLayer.h  MountainParams.h  RenderUtils.h  SDLRenderer.h  Scene.h
src/: Color.cpp  Mountain.cpp  MountainLayer.cpp  SDLRenderer.cpp  Scene.cpp  generator.cpp  main.cpp
